Adding User Swagger
